# skycode

./: .gitignore  LICENSE  README.md
sky-code/: .gitignore  Cargo.toml  chat.ps1  health-check.bat  launch.ps1  package.json  setup-auto.ps1  sky.bat  skyui.bat  start.ps1
sky-code-gui/: build.ps1  generate-icons.cjs  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
sky-code-gui/src/: App.css  App.tsx  LoaderShowcase.tsx  VoiceAssistantDemo.tsx
sky-code-gui/src-tauri/: Cargo.toml  create-icons.ps1  tauri.conf.json
sky-code-gui/src-tauri/icons/: icon.icns
sky-code-gui/src-tauri/src/: main.rs
sky-code-gui/src/components/: agents-dock.tsx  dialogs.tsx
sky-code-gui/src/components/ui/: animated-loading-svg-text-shimmer.tsx  claude-style-chat-input.tsx  loader.tsx  message-dock.tsx  voice-chat.tsx
sky-code-gui/src/lib/: runtime.ts
sky-code-npm/: package-lock.json  package.json
sky-code-npm/lib/: config.js  doctor.js  server.js
sky-code-npm/scripts/: postinstall.js
sky-code-npm/ui/: index.html
sky-code-npm/ui/assets/: event-VZ6uyeOz.js  index-BLStt_G9.css  index-C6z-08J0.js
sky-code/crates/api/src/: client.rs  error.rs  sse.rs
sky-code/crates/api/src/providers/: claw_provider.rs  mod.rs
sky-code/crates/api/tests/: client_integration.rs  provider_client_integration.rs
sky-code/crates/commands/src/: lib.rs
sky-code/crates/graph/: Cargo.toml
sky-code/crates/graph/src/: cache.rs  extractors.rs  lib.rs  query.rs  semantic.rs  storage.rs
sky-code/crates/graph/src/extractors/: go.rs  java.rs  python.rs  rust.rs  typescript.rs
sky-code/crates/graph/tests/: extractors_integration.rs
sky-code/crates/lsp/src/: client.rs  lib.rs  manager.rs
sky-code/crates/plugins/src/: hooks.rs  lib.rs
sky-code/crates/runtime/src/: bash.rs  config.rs  conversation.rs  hooks.rs  lib.rs  mcp_stdio.rs  oauth.rs  prompt.rs  remote.rs  usage.rs
sky-code/crates/sky/: Cargo.toml
sky-code/crates/sky/src/: app.rs  args.rs  config.rs  doctor.rs  input.rs  main.rs  model_manager.rs
sky-code/crates/tools/src/: lib.rs
sky-code/npm/: postinstall.js
sky-code/scripts/: build-cross-platform.ps1  build-portable.ps1
sky-code/scripts/install/: install-desktop-shortcut.ps1  install-sky-code-simple.ps1  install-sky-code.ps1
sky-code/scripts/run/: Sky-Code.bat  run-sky-auto.ps1  run-sky-simple.ps1  run-sky.ps1  start-litellm.ps1  start-sky-auto.ps1  start-sky.ps1  start-with-skybridge.ps1
sky-code/scripts/test/: test-stack.ps1
skybridge/: Cargo.toml
skybridge/src/: main.rs
