[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "1.0.0-beta.2"
edition = "2021"
license = "MIT"
publish = false
authors = ["wannabexaker"]
repository = "https://github.com/wannabexaker/skycode"
homepage = "https://github.com/wannabexaker/skycode"
description = "Autonomous AI agent platform in Rust - runs completely offline with local LLMs"

[workspace.dependencies]
lsp-types = "0.97"
serde_json = "1"

[workspace.lints.rust]
unsafe_code = "forbid"
# Allow unused code in tests (common pattern)
unused_imports = { level = "allow", priority = 1 }
dead_code = { level = "allow", priority = 1 }
unused_variables = { level = "allow", priority = 1 }
unused_mut = { level = "allow", priority = 1 }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_panics_doc = "allow"
missing_errors_doc = "allow"
