[package]
name = "skybridge"
version = "1.0.0-beta.2"
edition = "2021"
description = "Anthropic-to-Ollama API translator for Sky-Code offline mode"

[[bin]]
name = "skybridge"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
bytes = "1.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
