[package]
name = "graph"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true

[dependencies]
tree-sitter = "0.24"
tree-sitter-python = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-go = "0.23"
tree-sitter-java = "0.23"
petgraph = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
rusqlite = { version = "0.32", features = ["bundled"] }
walkdir = "2.5"
anyhow = "1.0"
tracing = "0.1"

[lints]
workspace = true
